[gd_scene load_steps=14 format=3 uid="uid://c6o4p6tu22e2j"]

[ext_resource type="Script" uid="uid://d24av5w4fjj00" path="res://Resources/effect_panel.gd" id="1_tpk7f"]
[ext_resource type="Script" uid="uid://bh3po6gw28t5k" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="2_h38wu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ek8wc"]
bg_color = Color(0.6, 0.490196, 1, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing_size = 2.0

[sub_resource type="LabelSettings" id="LabelSettings_cp502"]
line_spacing = 0.0
font_color = Color(0.772549, 0.721569, 1, 1)
shadow_size = 0
shadow_color = Color(0.592157, 0.501961, 1, 1)
shadow_offset = Vector2(0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fcijs"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2s6en"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.643137, 0.580392, 1, 0.74902)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q5ofi"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.368627, 0.333333, 0.705882, 0.74902)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fgmfu"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.745098, 0.713726, 1, 0.74902)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cbsyl"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.137255, 0.113725, 0.239216, 0.686275)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3cjxr"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_whic4"]
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_2s6en")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_q5ofi")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_fgmfu")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_cbsyl")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_3cjxr")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a0fdw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_megpm"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.258824, 0.223529, 0.423529, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
anti_aliasing_size = 2.0

[node name="EffectPanel" type="PanelContainer"]
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.05
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_ek8wc")
script = ExtResource("1_tpk7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="effectNameLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "EffectName"
label_settings = SubResource("LabelSettings_cp502")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 3

[node name="effectEnabledCheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
modulate = Color(0.823529, 0.764706, 1, 1)
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_fcijs")
button_pressed = true
action_mode = 0

[node name="effectPropertiesSmoothScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = SubResource("Theme_whic4")
follow_focus = true
horizontal_scroll_mode = 0
script = ExtResource("2_h38wu")
speed = 7.5
damping_scroll = 0.04
damping_drag = 0.04
hide_scrollbar_over_time = true
scrollbar_hide_time = 0.5
scrollbar_fade_in_time = 0.25
scrollbar_fade_out_time = 0.25
metadata/_custom_type_script = ExtResource("2_h38wu")

[node name="effectPropertiesListVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/effectPropertiesSmoothScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="deleteButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_a0fdw")
theme_override_styles/normal = SubResource("StyleBoxFlat_megpm")
text = "Delete"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/effectEnabledCheckButton" to="." method="_on_effect_enabled_check_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/deleteButton" to="." method="_on_delete_button_pressed"]
